src/objects/TR1__EducationHistory__c.object
<CustomObject>
    
    <fields>
        <fullName>RC_Attendance_End_Date__c</fullName>
        <label>Attendance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_Attendance_Start_Date__c</fullName>
        <label>Attendance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_Degree_Date__c</fullName>
        <label>Degree Date</label>
        <type>Date</type>
    </fields>

</CustomObject>